<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home_icon"
        android:title="@string/homee" />
    <item
        android:id="@+id/weekPlanFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/homeschedule_icon"
        android:title="@string/weekplan" />
    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/homeuser_icon"
        android:title="@string/profile" />
</menu>