<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_page.view.homeFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/maincategories"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/Categories"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="410dp"
        android:layout_height="161dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomee" />

    <TextView
        android:id="@+id/daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/daymeal"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />


    <TextView
        android:id="@+id/dailyIns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/ins"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily" />

    <Button
        android:id="@+id/btnFav"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnplan"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logoutbtn"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/searchTtxt"
        app:layout_constraintEnd_toStartOf="@+id/btnFav"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607"
        app:srcCompat="@drawable/logout_icon" />

    <TextView
        android:id="@+id/Ingrediante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/Countryfood"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recycle_ingre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle_daily"
        app:layout_constraintVertical_bias="0.807" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/_994430_bookmark_label_ribbon_save_web_icon"
        app:layout_constraintBottom_toBottomOf="@+id/btnFav"
        app:layout_constraintEnd_toEndOf="@+id/btnFav"
        app:layout_constraintStart_toStartOf="@+id/btnFav"
        app:layout_constraintTop_toTopOf="@+id/btnFav" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_ingre"
        android:layout_width="412dp"
        android:layout_height="228dp"
        android:layout_marginTop="356dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_daily"
        android:layout_width="362dp"
        android:layout_height="185dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyIns" />

    <Button
        android:id="@+id/searchTtxt"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/gray"
        android:text="@string/searchhint"
        android:textColor="@color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/searchTtxt"
        app:layout_constraintEnd_toEndOf="@+id/searchTtxt"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="@+id/searchTtxt"
        app:layout_constraintTop_toTopOf="@+id/searchTtxt"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/baseline_search_24" />



    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="47dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnplan"
        app:layout_constraintEnd_toEndOf="@+id/btnplan"
        app:layout_constraintStart_toStartOf="@+id/btnplan"
        app:layout_constraintTop_toTopOf="@+id/btnplan"
        app:srcCompat="@drawable/schedule_event_icon__1_" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

